<resources>
    <string name="app_name">Group8_InClass03</string>
    <string name="name_label">Name:</string>
    <string name="name_hint">Enter Name</string>
    <string name="email_label">Email:</string>
    <string name="email_hint">Enter Email</string>
    <string name="id_label">ID:</string>
    <string name="id_hint">Enter ID</string>
    <string name="dept_label">Dept:</string>
    <string name="select_button">Select</string>
    <string name="submit_button">Submit</string>
    <!-- Department Activity Strings-->
    <string name="comp_sci_radio_button">Computer Science</string>
    <string name="software_info_radio_button">Software Info. Systems</string>
    <string name="bio_informatics_radio_button">Bio Informatics</string>
    <string name="data_sci_radio_button">Data Science</string>
    <string name="cancel_button">Cancel</string>
</resources>