<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentActivity">

    <RadioGroup
        android:id="@+id/departmentRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/compSciRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/comp_sci_radio_button" />

        <RadioButton
            android:id="@+id/softwareInfoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/software_info_radio_button" />

        <RadioButton
            android:id="@+id/bioInformaticsRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_informatics_radio_button" />

        <RadioButton
            android:id="@+id/dataSciRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_sci_radio_button" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelButtonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cancel_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/departmentRadioGroup" />

    <Button
        android:id="@+id/selectButtonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/select_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/departmentRadioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>