<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/nameLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_label"
        app:layout_constraintStart_toStartOf="@+id/nameLabelProfile"
        app:layout_constraintTop_toBottomOf="@+id/nameLabelProfile" />

    <TextView
        android:id="@+id/idLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/id_label"
        app:layout_constraintStart_toStartOf="@+id/emailLabelProfile"
        app:layout_constraintTop_toBottomOf="@+id/emailLabelProfile" />

    <TextView
        android:id="@+id/deptLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dept_label"
        app:layout_constraintStart_toStartOf="@+id/idLabelProfile"
        app:layout_constraintTop_toBottomOf="@+id/idLabelProfile" />

    <TextView
        android:id="@+id/nameTextViewProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameLabelProfile"
        app:layout_constraintTop_toTopOf="@+id/nameLabelProfile" />

    <TextView
        android:id="@+id/emailTextViewProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nameTextViewProfile"
        app:layout_constraintTop_toTopOf="@+id/emailLabelProfile" />

    <TextView
        android:id="@+id/idTextViewProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailTextViewProfile"
        app:layout_constraintTop_toTopOf="@+id/idLabelProfile" />

    <TextView
        android:id="@+id/deptTextViewProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/idTextViewProfile"
        app:layout_constraintTop_toTopOf="@+id/deptLabelProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>